# pe-modifier

./: .gitignore  .gitmodules  CMakeLists.txt  Injector.py  README.md  injector.py  main.cpp  pybind11.cpp  requirements.txt  section.py  setup.py  shifter.py
include/: Injector.hpp  Section.hpp
src/: Injector.cpp  Injector.py  Section.cpp  Section.py  __init__.py
